# adpt-mech-agent

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  sales_conversation.md  test_cache_fix.py
.codefree/rules/: 所有测试文件都要放在项目根目录的tests文件夹下面.md
configs/: __init__.py  config.yaml  default_config.yaml
configs/prompts/: agent_prompts.yaml
demo/: api_server.py  web_demo.html
docs/: ARCHITECTURE_IMPROVEMENTS.md  MYSQL_CONFIGURATION.md  README_CUSTOMER_MANAGER.md  architecture.md  configuration_guide.md  getting_started.md  llm_configuration.md  logging_config.md
frontend/: README.md  index-1.html  index.html  requirements.txt  server.py  start_server.py
migrations/: 001_refactor_prompt_system.sql  002_add_tool_selection_strategy.sql  schema.sql
scripts/: cleanup_logs.py  knowledge_cli.py  migrate_prompts_to_db.py  quick_start.py  setup_environment.py  setup_mysql.py  start_server.py
src/: main.py
src/adaptive/: agent_orchestrator.py  agent_role.py  token_manager.py
src/agents/: __init__.py
src/agents/DTO/: agent_full_config.py
src/agents/core/: __init__.py  base_agent.py  base_llm.py  prompt_agent.py
src/agents/enum/: agent_state.py  agent_type.py  cognitive_state.py  prompt_type.py  run_time_state.py
src/agents/impls/: __init__.py
src/agents/impls/agent/: __init__.py  agent_factory.py  knowledge_aware_agent.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
src/agents/impls/llm/: __init__.py  deepseek_llm.py  llm_factory.py  mock_llm.py  openai_llm.py
src/agents/models/: __init__.py  agent_config.py  agent_profile.py  config_change_log.py  llm_config.py  message_config.py
src/agents/prompts/: __init__.py  prompt_template.py
src/agents/repositories/: __init__.py  agent_repository.py  base_repository.py  llm_repository.py  repo_factory.py  session_manager.py
src/agents/tools/: __init__.py  async_executor.py  chain.py  registry.py
src/agents/tools/builtin/: knowledge_tool.py
src/agents/utils/: llm_stream_helper.py
src/api/: __init__.py  dependencies.py  middleware.py
src/api/v1/: __init__.py  routers.py
src/api/v1/endpoints/: __init__.py  agents.py  chat.py
src/api/websocket/: __init__.py  chat_handler.py  connection_manager.py
src/knowledge/core/: knowledge_base.py
src/managers/: __init__.py  agent_manager.py  template_manager.py
src/orchestrator/: __init__.py  orchestrator.py  session_manager.py
src/services/: __init__.py  agent_service.py  async_prompt_template_service.py  llm_service.py  prompt_template_service.py  prompt_template_service_v2.py
src/shared/: __init__.py
src/shared/exceptions/: __init__.py  agent_errors.py  base_errors.py  knowledge_errors.py  tool_errors.py
src/shared/utils/: __init__.py  db_utils.py  log_config.py  redis_utils.py  tracing.py
tests/: main_test.py  sales_conversation.md  test_logging.py
web_demo/: agent_chat.html  app.js  index.html  index_1217.html  quantum_sales_chat_real-1.html  quantum_sales_chat_real.html  quantum_sales_chat_real.html.bk
